Gate sending referrers to CWS on whether the profile has SafeBrowsing enabled.

BUG=714129

Review-Url: https://codereview.chromium.org/2831263003
Cr-Commit-Position: refs/heads/master@{#466402}

Former-commit-id: a603f32b1aa3556586f75909a2c73d3006b92edf